# sized-chunks

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml
ci/: miri.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: assert.rs  inline_array.rs  ring_buffer.rs  sized_chunk.rs  sparse_chunk.rs
proptest-regressions/sparse_chunk/: iter.txt
proptest-regressions/tests/: ring_buffer.txt  sized_chunk.txt
src/: arbitrary.rs  bitmap.rs  const_bitmap.rs  inline_array.rs  lib.rs  sized_chunk.rs  sparse_chunk.rs  types.rs
src/inline_array/: iter.rs  mod.rs
src/ring_buffer/: index.rs  iter.rs  mod.rs  refpool.rs  slice.rs
src/sized_chunk/: iter.rs  mod.rs  refpool.rs
src/sparse_chunk/: iter.rs  mod.rs  refpool.rs
src/tests/: inline_array.rs  mod.rs  ring_buffer.rs  sized_chunk.rs  sparse_chunk.rs
