[package]
name = "sized-chunks"
version = "0.5.3"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Efficient sized chunk datatypes"
repository = "https://github.com/bodil/sized-chunks"
documentation = "http://docs.rs/sized-chunks"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["sparse-array"]
exclude = ["release.toml", "proptest-regressions/**"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "sized_chunk"
harness = false

[dependencies]
typenum = "1.11.2"
bitmaps = "2.0.0"
refpool = { version = "0.3", optional = true }
arbitrary = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "0.9.5"
proptest-derive = "0.1.2"
criterion = "0.3.0"
