[package]
name = "sized-chunks"
version = "0.6.1"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Efficient sized chunk datatypes"
repository = "https://github.com/bodil/sized-chunks"
documentation = "http://docs.rs/sized-chunks"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["sparse-array"]
exclude = ["release.toml", "proptest-regressions/**"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "sized_chunk"
harness = false

[features]
default = ["std"]
std = []
ringbuffer = ["array-ops"]

[dependencies]
typenum = "1.11.2"
bitmaps = "2.0.0"
array-ops = { version = "0.1", optional = true }
refpool = { version = "0.4", optional = true }
arbitrary = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.3"
